fix(styles): remove unnecessary x-cloak visibility rule in main.scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,7 +24,3 @@
 body {
 	overflow-x: hidden;
 }
-
-[x-cloak] {
-	visibility: hidden !important;
-}
